fastAcosF branched + sin(fastAcosF) moveCoeff (matches CPU formulas; physics residual remains)
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>